--- a/src/topk/multipass/CMakeLists.txt
+++ b/src/topk/multipass/CMakeLists.txt
@@ -3,4 +3,8 @@ set(MULTIPASS_SRC
     radik_knn.cu
 )
 
-target_sources(knn-static PRIVATE ${MULTIPASS_SRC})
+target_sources(topk-multipass-all PRIVATE ${MULTIPASS_SRC})
+target_sources(topk-multipass-minimal PRIVATE ${MULTIPASS_SRC})
+
+target_link_libraries(topk-multipass-all PRIVATE raft::raft)
+target_link_libraries(topk-multipass-minimal PRIVATE raft::raft)
