--- a/src/distance/CMakeLists.txt
+++ b/src/distance/CMakeLists.txt
@@ -1,4 +1,4 @@
-set(DIST_SRC
+set(DIST_ALL_SRC
     baseline_distance.cu
     eigen_distance.cpp
     cublas_distance.cu
@@ -9,4 +9,13 @@ set(DIST_SRC
     cutlass_distance.cu
 )
 
-target_sources(knn-static PRIVATE ${DIST_SRC})
+set(DIST_MINIMAL_SRC
+    baseline_distance.cu
+    cublas_distance.cu
+    cuda_distance.cpp
+    magma_distance.cu
+    tiled_distance.cu
+)
+
+target_sources(dist-all PRIVATE ${DIST_ALL_SRC})
+target_sources(dist-minimal PRIVATE ${DIST_MINIMAL_SRC})
