link only the executables

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -23,7 +23,7 @@ set(CMAKE_CUDA_FLAGS "${CMAKE_CUDA_FLAGS} -Xcompiler -Wall,-Wno-unknown-pragmas"
 set(CMAKE_CUDA_FLAGS "${CMAKE_CUDA_FLAGS} -Xptxas -v")
 set(CMAKE_CUDA_STANDARD 20)
 
-set(KNN_LIBRARIES CUDA::cudart CUDA::cuda_driver)
+set(KNN_LIBRARIES CUDA::cudart CUDA::cuda_driver CUDA::cublas OpenMP::OpenMP_CXX)
 
 option(CMAKE_CUDA_ARCHITECTURES "" "native")
 
@@ -91,70 +91,55 @@ include_directories(
     ${LIBS_DIR}/eigen
     ${LIBS_DIR}/faiss
     ${LIBS_DIR}/radik
+    ${LIBS_DIR}/gpu_topK_benchmark/include
 )
 
 # Executables
-add_library(knn-static SHARED ${knn_sources} ${faiss_sources})
+add_library(knn-static OBJECT EXCLUDE_FROM_ALL ${knn_sources} ${faiss_sources})
 
-add_library(dist-all SHARED)
-add_library(dist-minimal SHARED)
+add_library(dist-all OBJECT EXCLUDE_FROM_ALL)
+add_library(dist-minimal OBJECT EXCLUDE_FROM_ALL)
 
-target_link_libraries(dist-all PRIVATE CUDA::cublas)
-target_link_libraries(dist-minimal PRIVATE CUDA::cublas)
+add_library(topk OBJECT EXCLUDE_FROM_ALL)
 
-add_library(topk SHARED)
+add_library(topk-multipass-all OBJECT EXCLUDE_FROM_ALL)
+add_library(topk-multipass-minimal OBJECT EXCLUDE_FROM_ALL)
+add_library(topk-singlepass-all OBJECT EXCLUDE_FROM_ALL)
+add_library(topk-singlepass-minimal OBJECT EXCLUDE_FROM_ALL)
 
-target_link_libraries(topk PRIVATE OpenMP::OpenMP_CXX)
-
-add_library(topk-multipass-all SHARED)
-add_library(topk-multipass-minimal SHARED)
-add_library(topk-singlepass-all SHARED)
-add_library(topk-singlepass-minimal SHARED)
-
-add_executable(knn ${SRC_DIR}/main.cpp)
-add_executable(knn-minimal ${SRC_DIR}/main.cpp)
+add_executable(knn)
+add_executable(knn-minimal)
 add_executable(test)
 
 # add raft (air-topk)
 add_subdirectory(${LIBS_DIR}/raft/cpp EXCLUDE_FROM_ALL)
+set_target_properties(raft PROPERTIES CUDA_ARCHITECTURES "${CMAKE_CUDA_ARCHITECTURES}")
+set_target_properties(raft PROPERTIES CUDA_SEPARABLE_COMPILATION ON)
 
 # add Catch2
 add_subdirectory(${LIBS_DIR}/Catch2 EXCLUDE_FROM_ALL)
 
+# link
+target_link_directories(knn PRIVATE ${LIBS_DIR}/gpu_topK_benchmark/third_party)
+target_link_directories(knn-minimal PRIVATE ${LIBS_DIR}/gpu_topK_benchmark/third_party)
+target_link_directories(test PRIVATE ${LIBS_DIR}/gpu_topK_benchmark/third_party)
+
+target_link_libraries(knn PUBLIC ${KNN_LIBRARIES} gridselect)
+target_link_libraries(knn-minimal PUBLIC ${KNN_LIBRARIES} gridselect)
+target_link_libraries(test PUBLIC ${KNN_LIBRARIES} Catch2::Catch2WithMain gridselect)
+
 # set cuda properties
-set_target_properties(knn-static PROPERTIES CUDA_ARCHITECTURES "${CMAKE_CUDA_ARCHITECTURES}")
 set_target_properties(knn PROPERTIES CUDA_ARCHITECTURES "${CMAKE_CUDA_ARCHITECTURES}")
 set_target_properties(knn-minimal PROPERTIES CUDA_ARCHITECTURES "${CMAKE_CUDA_ARCHITECTURES}")
 set_target_properties(test PROPERTIES CUDA_ARCHITECTURES "${CMAKE_CUDA_ARCHITECTURES}")
 
-set_target_properties(raft PROPERTIES CUDA_ARCHITECTURES "${CMAKE_CUDA_ARCHITECTURES}")
-
-set_target_properties(dist-all PROPERTIES CUDA_ARCHITECTURES "${CMAKE_CUDA_ARCHITECTURES}")
-set_target_properties(dist-minimal PROPERTIES CUDA_ARCHITECTURES "${CMAKE_CUDA_ARCHITECTURES}")
-
-set_target_properties(topk PROPERTIES CUDA_ARCHITECTURES "${CMAKE_CUDA_ARCHITECTURES}")
-set_target_properties(topk-multipass-all PROPERTIES CUDA_ARCHITECTURES "${CMAKE_CUDA_ARCHITECTURES}")
-set_target_properties(topk-multipass-minimal PROPERTIES CUDA_ARCHITECTURES "${CMAKE_CUDA_ARCHITECTURES}")
-set_target_properties(topk-singlepass-all PROPERTIES CUDA_ARCHITECTURES "${CMAKE_CUDA_ARCHITECTURES}")
-set_target_properties(topk-singlepass-minimal PROPERTIES CUDA_ARCHITECTURES "${CMAKE_CUDA_ARCHITECTURES}")
-
-set_target_properties(knn-static PROPERTIES CUDA_SEPARABLE_COMPILATION ON)
 set_target_properties(knn PROPERTIES CUDA_SEPARABLE_COMPILATION ON)
 set_target_properties(knn-minimal PROPERTIES CUDA_SEPARABLE_COMPILATION ON)
 set_target_properties(test PROPERTIES CUDA_SEPARABLE_COMPILATION ON)
 
-set_target_properties(raft PROPERTIES CUDA_SEPARABLE_COMPILATION ON)
-
-set_target_properties(dist-all PROPERTIES CUDA_SEPARABLE_COMPILATION ON)
-set_target_properties(dist-minimal PROPERTIES CUDA_SEPARABLE_COMPILATION ON)
-
-set_target_properties(topk PROPERTIES CUDA_SEPARABLE_COMPILATION ON)
-set_target_properties(topk-multipass-all PROPERTIES CUDA_SEPARABLE_COMPILATION ON)
-set_target_properties(topk-multipass-minimal PROPERTIES CUDA_SEPARABLE_COMPILATION ON)
-set_target_properties(topk-singlepass-all PROPERTIES CUDA_SEPARABLE_COMPILATION ON)
-set_target_properties(topk-singlepass-minimal PROPERTIES CUDA_SEPARABLE_COMPILATION ON)
-
-target_compile_options(topk PRIVATE "${OpenMP_CXX_FLAGS}")
+target_compile_options(knn PRIVATE "${OpenMP_CXX_FLAGS}")
+target_compile_options(knn-minimal PRIVATE "${OpenMP_CXX_FLAGS}")
+target_compile_options(test PRIVATE "${OpenMP_CXX_FLAGS}")
 
 # compile all parts of the project
 add_subdirectory(${SRC_DIR}/distance)
@@ -164,7 +149,6 @@ add_subdirectory(${SRC_DIR}/topk/singlepass/detail)
 add_subdirectory(${SRC_DIR}/topk/multipass)
 add_subdirectory(${TEST_DIR})
 
-# link
-target_link_libraries(knn PRIVATE ${KNN_LIBRARIES} knn-static dist-all topk topk-multipass-all topk-singlepass-all)
-target_link_libraries(knn-minimal PRIVATE ${KNN_LIBRARIES} knn-static dist-minimal topk topk-multipass-minimal topk-singlepass-minimal)
-target_link_libraries(test PRIVATE ${KNN_LIBRARIES} knn-static dist-all topk topk-singlepass-minimal Catch2::Catch2WithMain)
+target_sources(knn PRIVATE ${SRC_DIR}/main.cpp  $<TARGET_OBJECTS:knn-static> $<TARGET_OBJECTS:dist-all> $<TARGET_OBJECTS:topk> $<TARGET_OBJECTS:topk-multipass-all> $<TARGET_OBJECTS:topk-singlepass-all>)
+target_sources(knn-minimal PRIVATE ${SRC_DIR}/main.cpp  $<TARGET_OBJECTS:knn-static> $<TARGET_OBJECTS:dist-minimal> $<TARGET_OBJECTS:topk> $<TARGET_OBJECTS:topk-multipass-minimal> $<TARGET_OBJECTS:topk-singlepass-minimal>)
+target_sources(test PRIVATE $<TARGET_OBJECTS:knn-static> $<TARGET_OBJECTS:dist-all> $<TARGET_OBJECTS:topk> $<TARGET_OBJECTS:topk-singlepass-minimal>)
