Add spdlog to dependencies of topk targets, include rmm in air-topk
This fixes a potential compilation error experienced on some systems

--- a/src/topk/multipass/CMakeLists.txt
+++ b/src/topk/multipass/CMakeLists.txt
@@ -6,5 +6,5 @@ set(MULTIPASS_SRC
 target_sources(topk-multipass-all PRIVATE ${MULTIPASS_SRC})
 target_sources(topk-multipass-minimal PRIVATE ${MULTIPASS_SRC})
 
-target_link_libraries(topk-multipass-all PRIVATE raft::raft)
-target_link_libraries(topk-multipass-minimal PRIVATE raft::raft)
+target_link_libraries(topk-multipass-all PRIVATE raft::raft spdlog::spdlog_header_only)
+target_link_libraries(topk-multipass-minimal PRIVATE raft::raft spdlog::spdlog_header_only)
