--- a/src/topk/singlepass/CMakeLists.txt
+++ b/src/topk/singlepass/CMakeLists.txt
@@ -14,5 +14,5 @@ set(TOPK_SINGLEPASS_SRC
 target_sources(topk-singlepass-all PRIVATE ${TOPK_SINGLEPASS_SRC})
 target_sources(topk-singlepass-minimal PRIVATE ${TOPK_SINGLEPASS_SRC})
 
-target_link_libraries(topk-singlepass-all PRIVATE raft::raft)
-target_link_libraries(topk-singlepass-minimal PRIVATE raft::raft)
+target_link_libraries(topk-singlepass-all PRIVATE raft::raft spdlog::spdlog_header_only)
+target_link_libraries(topk-singlepass-minimal PRIVATE raft::raft spdlog::spdlog_header_only)
